[package]
name = "happiness"
edition = "2021"
version.workspace = true
description.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.21.0" }
stylist = { version = "0.13.0", features = ["yew", "parser"] }
once_cell = "1.18.0"
strum = { version = "0.25.0", features = ["derive"] }
nom = "7.1.3"
indexmap = "2.1.0"
thiserror = "1.0.50"
gloo = "0.10.0"
heck = "0.4.1"
cssparser = "0.33.0"
rand = "0.8.5"
dark-light = "1.0.0"

[dev-dependencies]
yew = { version = "0.21.0", features=["ssr"] }
tokio = { version = "1.34.0", features=["rt", "macros"] }
