[package]
name = "server"
edition = "2021"
version.workspace = true
description.workspace = true
publish.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["ws", "tracing", "macros"] }
tokio = { version = "1.34.0", features = ["full"] }