[package]
name = "server"
edition = "2021"
version.workspace = true
description.workspace = true
publish.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# use for server
ssr = ["yew/ssr", "dep:axum", "dep:tokio", "dep:clap", "dep:tower-http"]

# use for hydration on client
hydration = ["yew/hydration"]

[[bin]]
name = "server"
required-features = ["ssr"]

[[bin]]
name = "ui"
required-features = ["hydration"]


[dependencies]
shared = { path = "../shared"}
yew = "0.21.0"
tracing = "0.1.40"
async-trait = "0.1.74"


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
axum = { version = "0.6.20", features = ["ws", "tracing", "macros", "headers"], optional = true }
tokio = { version = "1.34.0", features = ["full"], optional = true }
clap = { version = "4.4.8", features=["derive"], optional = true }
tower-http = { version = "0.4.4", features = ["trace", "fs"], optional = true }

