[package]
name = "server"
edition = "2021"
version.workspace = true
description.workspace = true
publish.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared"}
async-trait = "0.1.74"
serde = { version = "1.0.192", features = ["derive"] }
uuid = { version = "1.5.0", features = ["v4", "serde"] }
reqwest = { version = "0.11.22", features = ["json"] }
axum = { version = "0.6.20", features = ["ws", "tracing", "macros", "headers"]}
tokio = { version = "1.34.0", features = ["full", "macros"]}
clap = { version = "4.4.8", features=["derive"]}
tower-http = { version = "0.4.4", features = ["trace", "fs"] }
futures = "0.3.29"
tracing = "0.1.40"

