[package]
name = "shared"
edition = "2021"
version.workspace = true
description.workspace = true
publish.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = { version = "0.1.40", features=["log"] }
tracing-subscriber = { version = "0.3.17", features=["tracing-log"] }
serde = "1.0.192"
serde_json = "1.0.108"
thiserror = "1.0.50"
clap = { version = "4.4.8", features = ["derive"]}
