[package]
name = "ui"
edition = "2021"
version.workspace = true
description.workspace = true
publish.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.21.0" , features=["csr"]}
wasm-logger = "0.2.0"
log = "0.4.20"
uuid = { version = "1.5.0", features = ["v4", "serde"] }
gloo = "0.10.0"
strum = { version = "0.25.0", features = ["derive"] }
happiness = { version = "0.1.0", path = "../happiness" }
